<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_next">

        <ImageView
            android:id="@+id/random_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="#3fd2fc"
            android:src="@drawable/ma1"
            android:padding="4dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/random_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp">

            <ImageButton
                android:id="@+id/recog_next"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/nextbutt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recog_next"
                android:text="Click to next"
                android:textColor="#3fd2fc"/>

        </RelativeLayout>

    </RelativeLayout>


    <ImageButton
        android:id="@+id/recog_play"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/img_next"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@drawable/butt_select"/>

    <TextView
        android:id="@+id/recog_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_hint_start"
        android:textColor="#3fd2fc"
        android:layout_below="@id/recog_play"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:id="@+id/recog_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/recog_hint"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/recog_your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/recog_highest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_toEndOf="@id/recog_your_score"
            android:text="@string/high_score"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/recog_score"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recog_your_score"
            android:padding="16dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/highest_score"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recog_highest_score"
            android:layout_marginStart="37dp"
            android:layout_toEndOf="@id/recog_score"
            android:padding="16dp"
            android:textSize="24sp" />

    </RelativeLayout>


    <Button
        android:id="@+id/butt_play_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Listen_back"
        android:textColor="#FFFFFF"
        android:background="@drawable/butt_shape"
        android:layout_below="@id/recog_detail"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/recog_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textColor="#FFFFFF"
        android:background="@drawable/butt_shape"
        android:layout_below="@id/recog_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>